<resources>
    <string name="app_name">AndroidNativeMediaPicker</string>
    <string name="ok_string">OK</string>
    <string name="permission_denied">Permission denied!</string>
    <string name="denied_permissions_can_be_allowed_from_settings">Denied permissions can be allowed from settings</string>
    <string name="allow_permission">Allow permission</string>
    <string name="choose_image_from">Choose image from</string>
    <string name="open_camera">Open Camera</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="camera">Camera</string>
    <string name="image_gallery">Image Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="select_image">Select Image</string>
    <string name="go_to_settings">Go to settings</string>
    <string name="allow_permissions_to_continue">Allow permissions to continue </string>
    <string name="rotate_left">Rotate Left</string>
    <string name="rotate_right">Rotate Right</string>
    <string name="flip_horizontally">Flip Horizontal</string>
    <string name="flip_vertically">Flip Vertical</string>
    <string name="contrast">Contrast:</string>
    <string name="brightness">Brightness:</string>
    <string name="select_single_image">Select single image</string>
    <string name="select_multiple_image">Select multiple image</string>
    <string name="select_single_video">Select single video</string>
    <string name="select_multiple_videos">Select multiple videos</string>
    <string name="select_an_image_or_video">Select an image or video</string>
    <string name="select_images_or_videos">Select images or videos</string>
</resources>