<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data class="MainActivityBinding"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/dp_16"
        tools:context=".ui.MainActivity">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSingleImage"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_56"
            android:text="@string/select_single_image"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_16"
            app:backgroundTint="@color/colorTextHint"
            app:cornerRadius="@dimen/dp_28"
            app:rippleColor="@android:color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnMultipleImage"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_56"
            android:layout_marginTop="@dimen/dp_12"
            android:text="@string/select_multiple_image"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_16"
            app:backgroundTint="@color/colorTextHint"
            app:cornerRadius="@dimen/dp_28"
            app:rippleColor="@android:color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSingleVideo"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/dp_12"
            android:layout_height="@dimen/dp_56"
            android:text="@string/select_single_video"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_16"
            app:backgroundTint="@color/colorTextHint"
            app:cornerRadius="@dimen/dp_28"
            app:rippleColor="@android:color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnMultipleVideo"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_56"
            android:layout_marginTop="@dimen/dp_12"
            android:text="@string/select_multiple_videos"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_16"
            app:backgroundTint="@color/colorTextHint"
            app:cornerRadius="@dimen/dp_28"
            app:rippleColor="@android:color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSingleMedia"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/dp_12"
            android:layout_height="@dimen/dp_56"
            android:text="@string/select_an_image_or_video"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_16"
            app:backgroundTint="@color/colorTextHint"
            app:cornerRadius="@dimen/dp_28"
            app:rippleColor="@android:color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnMultipleMedia"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_56"
            android:layout_marginTop="@dimen/dp_12"
            android:text="@string/select_images_or_videos"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_16"
            app:backgroundTint="@color/colorTextHint"
            app:cornerRadius="@dimen/dp_28"
            app:rippleColor="@android:color/white" />

    </LinearLayout>
</layout>